--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 	implementation 'org.apache.poi:poi:5.4.0'
 	implementation 'org.apache.poi:poi-ooxml:5.4.0'
 	implementation 'org.apache.opennlp:opennlp-tools:2.5.3'
+	implementation 'edu.stanford.nlp:stanford-corenlp:4.5.4'
+	implementation 'edu.stanford.nlp:stanford-corenlp:4.5.4:models'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 
 	compileOnly 'org.projectlombok:lombok:1.18.36'
 	annotationProcessor 'org.projectlombok:lombok:1.18.36'
